# ai-band-plugin

./: .gitignore  AIBandPlugin.jucer  AI_BAND_ORCHESTRATOR_SPECS.md  AUTHOR.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_COMPLETE.md  QUICK_SETUP.md  README.md  SETUP.md  build_tests.bat  config.example.ini  generate_test_files.py  run_tests.bat  setup.bat  setup_environment.bat  simple_test.cpp  test_integration.py  verify_project.bat
.github/: copilot-instructions.md
Source/: MidiManager.cpp  MidiManager.h  NetworkClient.cpp  NetworkClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: MidiManagerTests.cpp  MidiManagerTests.h  PluginProcessorTests.cpp  PluginProcessorTests.h  SimpleJuce.h  TestApplication.cpp  TestFramework.cpp  TestFramework.h  TestRunner.cpp  TestRunner.h
